@@ -1,4 +1,4 @@
-.TH "ecasound-iam" "1" "20\&.08\&.2003" "" "Multimedia software" 
+.TH "ecasound-iam" "1" "15\&.01\&.2004" "" "Multimedia software" 
 .PP 
 .SH "NAME" 
 ecasound-iam \- ecasound interactive mode
@@ -482,6 +482,11 @@ the format specified in section \fIOPERATOR DESCRIPTIONS\fP\&. \fI[s]\fP
 .IP "map-ladspa-list" 
 Prints a list of registered LADSPA plugins using 
 the format specified in section \fIOPERATOR DESCRIPTIONS\fP\&. \fI[s]\fP
+.IP 
+.IP "map-ladspa-id-list" 
+Prints a list of registered LADSPA plugins using 
+the format specified in section \fIOPERATOR DESCRIPTIONS\fP\&. 
+Numerical LADPSA plugin identifiers are used\&. \fI[s]\fP
 .IP 
 .IP "map-ctrl-list" 
 Prints a list of registered controllers using 
