@@ -23,7 +23,7 @@
 <hr>
 
 <h1>ecasound-iam</h1>
-<h2>20.08.2003</h2>
+<h2>15.01.2004</h2>
 
 
     
@@ -409,6 +409,10 @@ the format specified in section <em>OPERATOR DESCRIPTIONS</em>. <em>[s]</em>
 <p><p></p><dt><strong>map-ladspa-list</strong><dd>
 Prints a list of registered LADSPA plugins using 
 the format specified in section <em>OPERATOR DESCRIPTIONS</em>. <em>[s]</em>
+<p><p></p><dt><strong>map-ladspa-id-list</strong><dd>
+Prints a list of registered LADSPA plugins using 
+the format specified in section <em>OPERATOR DESCRIPTIONS</em>. 
+Numerical LADPSA plugin identifiers are used. <em>[s]</em>
 <p><p></p><dt><strong>map-ctrl-list</strong><dd>
 Prints a list of registered controllers using 
 the format specified in section <em>OPERATOR DESCRIPTIONS</em>. <em>[s]</em>
