@@ -101,7 +101,7 @@ class ECA_CONTROL : public ECA_CONTROL_OBJECTS,
   void operator_descriptions_helper(const ECA_OBJECT_MAP& arg, std::string* result);
   void cop_descriptions(void);
   void preset_descriptions(void);
-  void ladspa_descriptions(void);
+  void ladspa_descriptions(bool use_id);
   void ctrl_descriptions(void);
 
   /*@}*/
